feat: added passing JSON data to Pug files

--- a/test/views/head.pug
+++ b/test/views/head.pug
@@ -1,8 +1,9 @@
 doctype html
 html(lang='en')
 	head
-		meta(charset='UTF-8')
-		meta(name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0')
+		meta(charset=data.meta.charset)
+		meta(name='viewport' content=data.meta.viewport)
+		meta(name='description' content=data.meta.description)
 		title Pagery Test
 		style
 			!= css
