--- a/test/views/foo.pug
+++ b/test/views/foo.pug
@@ -3,3 +3,4 @@ body
 	h1.text-xl.welcome This is the foo page!
 	p.text This is a test page.
 	p.text-lg.italic This is a test page #[strong indeed]!!
+	p.text-lg Some data for ya: #{data.foo.information}
