--- a/test/views/head.pug
+++ b/test/views/head.pug
@@ -6,4 +6,4 @@ html(lang='en')
 		meta(name='description' content=data.meta.description)
 		title Pagery Test
 		style
-			!= css
+			!= css.tailwind
